# AutoBoot

./: LICENSE  README.md  pyproject.toml
autoboot/: cli.py
