[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-autoboot"
version = "0.1.0"
description = "A Project Bootstrapper for Automatic GitHub Repository Creation"
authors = [
    { name="sourav karanth", email="souravkaranth@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "requests"
]

[project.scripts]
autoboot = "autoboot.cli:main"
